--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         <!--android:value="splitActionBarWhenNarrow" />-->
 
         <activity
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
             android:name="com.mbembac.letsmeetup.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
@@ -23,16 +25,46 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
 
-        <activity android:name=".LoginSignupActivity" />
-        <activity android:name=".FindFriendsActivity" />
-        <activity android:name=".FriendMapActivty" />
-        <activity android:name=".FragmentMainPage" />
-        <activity android:name=".EditAccountActivity" />
-        <activity android:name=".CreateAccountActivity" />
-        <activity android:name=".LostPasswordActivity" />
-        <activity android:name=".LocationActivity"/>
+        </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
+            android:name=".Welcome" />
+        <activity
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
+            android:name=".LoginSignupActivity" />
+        <activity
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
+            android:name=".FindFriendsActivity" />
+        <activity
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
+            android:name=".FriendMapActivty" />
+        <activity
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
+            android:name=".FragmentMainPage" />
+        <activity
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
+            android:name=".EditAccountActivity" />
+        <activity
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
+            android:name=".CreateAccountActivity" />
+        <activity
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
+            android:name=".LostPasswordActivity" />
+        <activity
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
+            android:name=".LocationActivity">
+
+        </activity>
 
         <!--googlemaps-->
         <meta-data
